# asset

./: .README.md.swp  .env  .gitignore  Dockerfile  README.md  asset.db  device.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: Asset-Deploy.yml  dev-action.yml  main-action.yml  sonar.yml  tag-action.yml
api/: asset.py  device.py  routers.py
app/: main.py
app/api/: account.py  asset.py  routers.py
app/crud/: account.py  asset.py
app/db/: session.py
app/models/: account.py  asset.py
app/schemas/: account.py  asset.py
app/templates/: index.html
crud/: asset.py  device.py
db/: init.sql  session.py
helm/: Chart.yaml  values.yaml
helm/files/: init.sql  nginx.conf  vault.hcl
helm/templates/: configmap-db.yaml  configmap-nginx.yaml  configmap-vault.yaml  deployment-db.yaml  deployment-proxy.yaml  deployment-vault.yaml  deployment-web.yaml  service-proxy.yaml  service-vault.yaml  service-web.yaml
models/: asset.py  device.py
nginx/: docker-compose.yml  nginx.conf
nginx/ssl/: STAR.emro.co.kr.key  STAR.emro.co.kr_fullchain.pem
schemas/: asset.py  device.py
