[project]
name = "asset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.1.8",
    "exceptiongroup==1.3.0",
    "fastapi==0.116.1",
    "h11==0.16.0",
    "jinja2==3.1.6",
    "pio==0.0.3",
    "psycopg[binary]>=3.1",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "python-dotenv==1.1.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
]
